--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/hakatashi/kammusu-means/issues"
   },
-  "homepage": "https://github.com/hakatashi/kammusu-means#readme"
+  "homepage": "https://github.com/hakatashi/kammusu-means#readme",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "d3": "^4.1.0",
+    "jquery": "^3.0.0"
+  }
 }
