--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "k-means.js",
   "scripts": {
     "build": "browserify lib/index.js -o index.js -t [ babelify --presets [ es2015 ] ]",
+    "serve": "http-server -p 8080",
+    "watch": "chokidar lib/index.js -c \"npm run build\"",
+    "livereload": "livereload \"index.js, index.html, index.css\"",
+    "dev": "concurrently \"npm run serve\" \"npm run watch\" \"npm run livereload\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +26,11 @@
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "chokidar-cli": "^1.2.0",
+    "concurrently": "^2.2.0",
     "d3": "^4.1.0",
-    "jquery": "^3.0.0"
+    "http-server": "^0.9.0",
+    "jquery": "^3.0.0",
+    "livereload": "^0.5.0"
   }
 }
