--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "d3": "^4.1.0",
     "http-server": "^0.9.0",
     "jquery": "^3.0.0",
-    "livereload": "^0.5.0"
+    "livereload": "^0.5.0",
+    "mathjs": "^3.3.0"
   }
 }
