--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-server": "^0.9.0",
     "jquery": "^3.0.0",
     "livereload": "^0.5.0",
-    "mathjs": "^3.3.0"
+    "mathjs": "^3.3.0",
+    "numeric": "^1.2.6"
   }
 }
